Opened 12 months ago
Closed 11 months ago
#15964 closed bug (fixed)
HaikuDepot crashes in WorkStatusView::SetText
Reported by: | hitech | Owned by: | apl-haiku |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | Applications/HaikuDepot | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #15984 | |
Platform: | All |
Description (last modified by )
I've downloaded a package to my local filesystem and trying to install it with double-click. The interface of HaikuDepot opens and crashes immediately.
Crash reports attached.
For verification, I've installed bdcalc from HaikuDepot repository (successfully), moved the package from /boot/system/packages to desktop and double-clicked the package file. HaikuDepot crashed (report attached).
hrev54106, x86-64
Attachments (3)
Change History (10)
by , 12 months ago
Attachment: | HaikuDepot-126725-debug-bdcalc.report added |
---|
by , 12 months ago
Attachment: | HaikuDepot-84485-debug-03-05-2020-19-10-52.report added |
---|
Crash report of Beam installation attempt 1
by , 12 months ago
Attachment: | HaikuDepot-86268-debug-03-05-2020-19-44-35.report added |
---|
Crash report of Beam installation attempt no. 2
comment:1 by , 12 months ago
By the way, copying any package file into /boot/system/packages works successfully.
comment:2 by , 12 months ago
Description: | modified (diff) |
---|
comment:3 by , 11 months ago
Summary: | HaikuDepot crashes when trying to install a package from filesystem → HaikuDepot crashes in WorkStatusView::SetText |
---|
comment:4 by , 11 months ago
Blocking: | 15984 added |
---|
comment:6 by , 11 months ago
Milestone: | Unscheduled → R1/beta2 |
---|
Let's try to fix this regression before beta2.
Crash report of bdcalc installation