src/apps/haikudepot/ui/PackageInfoView.cpp
@@ -500,7 +500,6 @@ public:
 		} else {
 			AdoptActions(package);
 		}
-
 	}
 
 	void AdoptActions(const PackageInfo& package)
@@ -1365,9 +1364,8 @@ PackageInfoView::MessageReceived(BMessage* message)
 				fTitleView->SetPackage(*package.Get());
 			}
 
-			if ((changes & PKG_CHANGED_STATE) != 0) {
+			if ((changes & PKG_CHANGED_STATE) != 0)
 				fPackageActionView->SetPackage(*package.Get());
-			}
 
 			break;
 		}
